kubernetes/order/order-service.yml
#version
apiVersion: v1
#set resource type as service
kind: Service
#add metadata
metadata:
  #set service name
  name: order-service
  #(optional) if using the namespace
  namespace: ecommerce-app 
  #labeling
  labels:
    app: order
spec:
  selector:
    #select pod by app
    app: order
  ports:
    #use TCP
    - protocol: TCP
    #listening to port
      port: 3000
  #set type to NodePort
  type: NodePort
